--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 			<version>5.1.44</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		    <version>5.1.2.RELEASE</version>
+		</dependency>
 
 
 	</dependencies>
